# annotateEZ

./: .gitignore  CITATION.cff  README.md  config.yml  pyproject.toml
.github/workflows/: publish.yml
annotateez/: __init__.py  __main__.py  cli.py  config.py
annotateez/core/: image.py
annotateez/gui/: __init__.py  main_window.py  settings_dialog.py  theme.py  widgets.py
annotateez/io/: eventset.py
src/annotateez/core/: __init__.py
src/annotateez/gui/: main_window.py  settings_dialog.py
src/annotateez/io/: __init__.py  eventset.py
tests/: conftest.py  test_config.py  test_eventset.py  test_image.py
