[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "annotate-ez-test"
version = "0.1.0"
description = "A GUI tool for visualizing and annotating immunofluorescence microscopy cell images."
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
authors = [{ name = "Amin Naghdloo", email = "amin.naghdloo@gmail.com" }]
keywords = [
    "microscopy",
    "annotation",
    "image analysis",
    "immunofluorescence",
    "single-cell",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Image Processing",
]
requires-python = ">=3.8"
dependencies = [
    "h5py>=3.1.0,<4",
    "numpy>=1.21.1,<2",
    "pandas>=1.3.1,<2",
    "PyQt5>=5.15.0,<6",
    "PyYAML>=6.0,<7",
    "tables>=3.8.0,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
annotate-ez = "annotateez.cli:main"

[project.urls]
Homepage = "https://github.com/aminnaghdloo/annotateEZ"
Repository = "https://github.com/aminnaghdloo/annotateEZ"
"Bug Tracker" = "https://github.com/aminnaghdloo/annotateEZ/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
annotateez = ["icons/*.png"]
